syntax = "proto3";
package file.pb;
option go_package="file/api/pb;proto";
import "google/protobuf/empty.proto";

message UpdateConfigRequest{
  int64 id = 1;
  int64 appId = 2;
  int64 userId = 3;
  string key = 4;
  string secrect = 5;
  string host = 6;
  int64 expireTime = 7;
  string uploadDir = 8;
  string callBackUrl = 9;
}

message ConfigResponse{
  int64 id = 1;
  int64 appId = 2;
  int64 userId = 3;
  string key = 4;
  string secrect = 5;
  string host = 6;
  int64 expireTime = 7;
  string uploadDir = 8;
  string callBackUrl = 9;
}

service Config{
  rpc GetConfig(UpdateConfigRequest) returns(ConfigResponse);
  rpc CreateConfig(UpdateConfigRequest) returns(ConfigResponse);
  rpc UpdateConfig(UpdateConfigRequest) returns(ConfigResponse);
  rpc DeleteConfig(UpdateConfigRequest) returns(google.protobuf.Empty);
}